Correctly align items in tree

--- a/src/app/components/bracket/bracket.component.scss
+++ b/src/app/components/bracket/bracket.component.scss
@@ -20,6 +20,7 @@
 
   align-items: center;
   justify-content: stretch;
+  justify-items: end;
 
   .player-name {
     min-width: 200px;
